Fix for IZPACK-512.